manifests/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker-service
  namespace: cloudstream-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker-service

  template:
    metadata:
      labels:
        app: worker-service

    spec:
      containers:
      - name: worker-service
        image: cloudstreamacrshivani001.azurecr.io/worker-service:v1
        imagePullPolicy: Always

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
